examples/test/testpolicy3118.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3118
  namespace: namespace327
spec:
  podSelector:
    matchLabels:
      key9: value45
      key30: value46
      key46: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value22
          key1: value3
          key19: value32
      podSelector:
        matchLabels:
          key30: value6
          key25: value34
          key15: value8
